--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
     "gh-pages": "^6.1.1",
     "storybook": "^8.2.6"
