--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,16 +3,13 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: ["main"]
-
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -24,16 +21,24 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm run build-storybook
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build Storybook
+        run: npm run build-storybook
+
+      - name: Debug - List Files in Storybook Directory
+        run: ls -la ./storybook-static  # 🛠 Check if the folder exists
+
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v2
         with:
           path: "./storybook-static"
+          name: github-pages  # ✅ Ensure the artifact name matches
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
