--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,10 @@ on:
   push:
     branches:
       - main
-
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 jobs:
   deploy:
     environment:
