--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "98.css": "^0.1.20",
     "prettier": "^3.4.1",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
