--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@changesets/cli": "^2.27.10",
     "98.css": "^0.1.20",
     "prettier": "^3.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^16.0 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "^16.0 || ^17.0 || ^18.0 || ^19.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
